# BackgroundTracker

./: README.md
Tracker_B13_code/: CMakeLists.txt
Tracker_B13_code/src/: background_alg.cpp  background_alg.h  colotracker.cpp  colotracker.h
code/: CMakeLists.txt
code/src/: main_demo.cpp
